--- a/src/assets/sass/components/_pizza.scss
+++ b/src/assets/sass/components/_pizza.scss
@@ -1,21 +1,28 @@
-.pizza {
-    width: 50%;
-    padding-left: 10rem;
+.pizzas {
+    display: grid;
+    gap: 4.8rem;
+    grid-template-columns: 1fr 1fr; // 1 part 1 part
+}
 
-    &:not(:last-child) {
-        padding-bottom: 2.5rem;
+.pizza {
+    display: flex;
+    gap: 3.2rem;
+
+    &.sold-out {
+        color: #888;
+
+        >img {
+            filter: grayscale(1);
+            opacity: 0.5;
+        }
     }
 
-    @include clearfix;
-
     >img {
-        width: 12rem;
-        float: left;
+        width: 15rem;
+        height: 15rem;
     }
 
     >div {
-        padding-left: 15rem;
-
         >h3 {
             font-size: 2.5rem;
             font-weight: lighter;
